recursion.logo.lessons.recursion.logo.tree.Tree.scala.error
Tree:7: error: not enough arguments for method tree: (steps: Int, length: Double, angle: Double, shrink: Double)Unit.
Unspecified value parameters length, angle, shrink.
    tree(steps)
        ^Tree:12: error: not found: value step
  current(step)
          ^