recursion.logo.lessons.recursion.logo.tree.Tree.scala.code
def tree(steps:Int, length:Double, angle:Double, shrink:Double)    {
	if (steps==0){
    recule(length)
    gauche(angle*2)
    avance(length)
    recule(length)
    tree(steps)
    
  }else{
  avance(length)
  droite(angle)
  current(step)
  tree(steps-1, length, angle, shrink)  
  }
  
  


}